--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,22 @@ Description: A package developed for the capstone project of the Coursera's
 Authors@R: person("Cesar", "Urteaga", , "cesar@no-reply.com", c("aut", "cre"))
 Depends:
     R (>= 3.4.1)
+Imports:
+    dplyr,
+    ggplot2,
+    grid,
+    leaflet,
+    lubridate,
+    plyr,
+    purrr,
+    readr,
+    scales,
+    stringr,
+    tidyr
+Suggests:
+    knitr,
+    rmarkdown,
+    testthat
 License: GPL-3
 URL: https://github.com/Cesar-Urteaga/rnoaa
 BugReports: https://github.com/Cesar-Urteaga/rnoaa/issues
