--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,3 +34,4 @@ BugReports: https://github.com/Cesar-Urteaga/rnoaa/issues
 LazyData: true
 Encoding: UTF-8
 RoxygenNote: 6.0.1
+VignetteBuilder: knitr
