--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,21 +8,26 @@ export(eq_location_clean)
 export(eq_map)
 export(geom_timeline)
 export(geom_timeline_label)
+export(providers)
+export(theme_timeline)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_)
 importFrom(dplyr,row_number)
 importFrom(ggplot2,.pt)
 importFrom(ggplot2,GeomPoint)
 importFrom(ggplot2,GeomSegment)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,draw_key_blank)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(grid,gpar)
 importFrom(grid,grobTree)
 importFrom(grid,polylineGrob)
