--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(eq_location_clean)
 export(eq_map)
 export(geom_timeline)
 export(geom_timeline_label)
+export(get_earthquake_data)
 export(providers)
 export(theme_timeline)
 importFrom(dplyr,"%>%")
