Enhances the functionality of data functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,row_number)
+importFrom(dplyr,rowwise)
 importFrom(ggplot2,.pt)
 importFrom(ggplot2,GeomPoint)
 importFrom(ggplot2,GeomSegment)
@@ -43,10 +44,11 @@ importFrom(leaflet,addProviderTiles)
 importFrom(leaflet,hideGroup)
 importFrom(leaflet,layersControlOptions)
 importFrom(leaflet,leaflet)
-importFrom(lubridate,ymd_h)
 importFrom(plyr,defaults)
+importFrom(purrr,map2_chr)
 importFrom(purrr,pmap_chr)
 importFrom(readr,read_delim)
 importFrom(scales,comma)
 importFrom(stringr,str_to_title)
+importFrom(stringr,str_trim)
 importFrom(tidyr,unite)
