--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,row_number)
 importFrom(dplyr,rowwise)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,.pt)
 importFrom(ggplot2,GeomPoint)
 importFrom(ggplot2,GeomSegment)
