--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(ggplot2,element_line)
 importFrom(ggplot2,layer)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(grDevices,chull)
 importFrom(leaflet,addCircleMarkers)
 importFrom(leaflet,addLayersControl)
 importFrom(leaflet,addMeasure)
@@ -35,3 +36,4 @@ importFrom(scales,comma)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trim)
 importFrom(tidyr,unite)
+importFrom(utils,download.file)
