--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,5 +1,10 @@
 # Author            : Cesar R. Urteaga Reyesvera.
 # Creation date     : August 11, 2017.
 
+^README\.Rmd$
+^README-.*\.png$
+^logo\.png$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^\.travis\.yml$
+^appveyor\.yml$
