--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,15 +11,31 @@ export(get_earthquake_data)
 export(providers)
 export(theme_timeline)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,row_number)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,.pt)
+importFrom(ggplot2,GeomPoint)
+importFrom(ggplot2,GeomSegment)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,draw_key_blank)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
+importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
 importFrom(grDevices,chull)
+importFrom(grid,gpar)
+importFrom(grid,grobTree)
+importFrom(grid,polylineGrob)
+importFrom(grid,segmentsGrob)
+importFrom(grid,textGrob)
 importFrom(leaflet,addCircleMarkers)
 importFrom(leaflet,addLayersControl)
 importFrom(leaflet,addMeasure)
@@ -29,6 +45,7 @@ importFrom(leaflet,addProviderTiles)
 importFrom(leaflet,hideGroup)
 importFrom(leaflet,layersControlOptions)
 importFrom(leaflet,leaflet)
+importFrom(plyr,defaults)
 importFrom(purrr,map2_chr)
 importFrom(purrr,pmap_chr)
 importFrom(readr,read_delim)
